--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             <button onclick="visualizarPDF('COTIZADOR INDIVIDUAL v2.0.pdf')">COTIZADOR INDIVIDUAL</button>
             <button onclick="visualizarPDF('COTIZADOR CORRESIDENCIAL v2.0.pdf')">COTIZADOR CORRESIDENCIAL</button>
             <button onclick="visualizarPDF('COTIZADOR CASH4ALL v2.0.pdf')">COTIZADOR CASH4ALL</button>
+            <button onclick="visualizarPDF('Cotizador Actualizar Propuesta.pdf')">COTIZADOR PARA ACTUALIZAR PROPUESTA</button>
             <button onclick="unirPDFs()">UNIR PDFS</button>
         </div>
 
