--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2>Selecciona un PDF para editar: </h2>
         <!-- Botones para visualizar los PDFs -->
         <div class="botones">
-            <button onclick="visualizarPDF('COTIZADOR INDIVIDUAL v2.0.pdf')">COTIZADOR INDIVIDUAL</button>
+            <button onclick="visualizarPDF('COTIZADOR INDIVIDUAL v2.0.pdf')">COTIZADOR INDIVIDUAL ACTUALIZADO</button>
             <button onclick="visualizarPDF('COTIZADOR CORRESIDENCIAL v2.0.pdf')">COTIZADOR CORRESIDENCIAL</button>
             <button onclick="visualizarPDF('COTIZADOR CASH4ALL v2.0.pdf')">COTIZADOR CASH4ALL</button>
             <button onclick="visualizarPDF('Cotizador Actualizar Propuesta.pdf')">COTIZADOR PARA ACTUALIZAR PROPUESTA</button>
