--- a/index.html
+++ b/index.html
@@ -104,21 +104,13 @@
         <iframe id="pdfViewer" src="" width="100%" height="500px"></iframe>
     </div>
     <script>
- function visualizarPDF(pdfUrl) {
-    var pdfViewer = document.getElementById('pdfViewer');
-    pdfViewer.src = pdfUrl;
+function visualizarPDF(pdfUrl) {
 
-    // Esperar a que el iframe cargue su contenido
-    pdfViewer.onload = function() {
-        try {
-            // Intentar acceder al objeto window del iframe y aplicar zoom
-            pdfViewer.contentWindow.document.body.style.zoom = '140%';
-        } catch (e) {
-            console.error("No se pudo aplicar el zoom al PDF:", e);
-            alert("No se pudo establecer el zoom del PDF al 140% por defecto. Esto puede deberse a la configuración de tu navegador o a la forma en que se muestra el PDF.");
-        }
-    };
-}
+            // Muestra el PDF en el iframe
+
+            document.getElementById('pdfViewer').src = pdfUrl;
+
+        }
 
         function unirPDFs() {
             // Abre la página para unir PDFs en una nueva pestaña
