--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <button onclick="visualizarPDF('COTIZADOR INDIVIDUAL v2.1.pdf')">COTIZADOR INDIVIDUAL ACTUALIZADO</button>
             <button onclick="visualizarPDF('COTIZADOR CORRESIDENCIAL v2.0.pdf')">COTIZADOR CORRESIDENCIAL</button>
             <button onclick="visualizarPDF('COTIZADOR CASH4ALL v2.0.pdf')">COTIZADOR CASH4ALL</button>
-            <button onclick="visualizarPDF('Cotizador Actualizar Propuesta.pdf')">COTIZADOR PARA ACTUALIZAR PROPUESTA</button>
+            <button onclick="visualizarPDF('Cotizador Actualizar Propuesta.pdf')">COTIZADOR PARA MONTOS DE $180,000 A 240,000</button>
             <button onclick="unirPDFs()">UNIR PDFS</button>
         </div>
 
