--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2>Selecciona un PDF para editar: </h2>
         <!-- Botones para visualizar los PDFs -->
         <div class="botones">
-            <button onclick="visualizarPDF('')">COTIZADOR INDIVIDUAL MONTOS DE $240,000 A $1,350,000</button>
+            <button onclick="visualizarPDF('COTIZADOR INDIVIDUAL v2.1.pdf')">COTIZADOR INDIVIDUAL MONTOS DE $240,000 A $1,350,000</button>
             <button onclick="visualizarPDF('COTIZADOR CORRESIDENCIAL v2.0.pdf')">COTIZADOR CORRESIDENCIAL</button>
             <button onclick="visualizarPDF('COTIZADOR CASH4ALL v2.0.pdf')">COTIZADOR CASH4ALL</button>
             <button onclick="visualizarPDF('Cotizador Actualizar Propuesta.pdf')">COTIZADOR PARA MONTOS DE $180,000 A 240,000</button>
